# GBridge

./: .gitignore  BACKLOG.md  CHANGELOG.md  README.md  SECURITY.md  gbridge.spec  pyproject.toml
.github/workflows/: build-installers.yml  ci.yml  security.yml
docs/: AZURE_SETUP.md
installer/linux/: build.sh
installer/macos/: build.sh
installer/windows/: README.md  build.bat  gbridge.nsi
src/gbridge/: __init__.py  __main__.py  daemon.py
src/gbridge/config/: defaults.py  settings.py
src/gbridge/core/: conflicts.py  diagnostics.py  engine.py  hasher.py  ledger.py  pusher.py
src/gbridge/dav/: __init__.py  ocs_config.py  server.py  storage.py
src/gbridge/google/: auth.py  calendar.py  models.py  people.py  tasks.py
src/gbridge/gui/: __init__.py  conflicts.py  wizard.py
src/gbridge/microsoft/: __init__.py  _http.py  auth.py  graph_calendar.py  graph_people.py  graph_tasks.py  mapping.py  models.py
src/gbridge/outlook/: detect.py
src/gbridge/service/: __init__.py  linux.py  macos.py  windows.py
src/gbridge/utils/: backoff.py  logger.py  notify.py  resources.py  scheduler.py  tray.py
tests/: conftest.py  test_auth.py  test_backoff.py  test_calendar.py  test_cli_phase2.py  test_cli_selection.py  test_conflict_resolution.py  test_conflicts.py  test_daemon.py  test_dav_server.py  test_dav_storage.py  test_deletion_propagation.py  test_detect.py  test_diagnostics.py  test_engine.py  test_graph_read.py  test_graph_write.py  test_hasher.py  test_ledger.py  test_main.py  test_microsoft_auth.py  test_microsoft_models.py  test_models.py  test_notify.py  test_ocs_config.py  test_people.py  test_progress.py  test_pusher.py  test_pusher_dav.py  test_pusher_graph.py  test_recurrence.py  test_resources.py  test_scheduler.py  test_service.py  test_tasks.py  test_tray.py
