[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbridge"
version = "0.1.0"
description = "Sync Google Contacts, Calendar, and Tasks with Microsoft Outlook"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Amit Rintzler" },
]
keywords = ["google", "outlook", "sync", "contacts", "calendar", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Office/Business",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    "keyring>=24.0.0",
    "apscheduler>=3.10.0",
    "plyer>=2.1.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    # Phase 2 — Microsoft Graph + DAV write-back.
    "msal>=1.28.0",
    "requests>=2.31.0",
    "vobject>=0.9.7",
    "icalendar>=5.0.0",
    "radicale>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-requests>=2.31.0",
    "pyinstaller>=6.0.0",
    "pip-audit>=2.6.0",
    "bandit[toml]>=1.7.0",
]

[project.scripts]
gbridge = "gbridge.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S603", "S607", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
# B105/B106 — 'password' is a bandit false positive on keyring key names.
# B311     — random is used only for backoff jitter, never crypto.
# B404     — subprocess imports are for Radicale supervision, never shell.
# B405     — ElementTree is used to emit XML, never to parse untrusted input.
# B603/B607 — already-safe subprocess invocations (supervisor, detect).
# B608     — f-string SQL columns are module constants, not user input.
skips = ["B105", "B106", "B311", "B404", "B405", "B603", "B607", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
]

# Coverage threshold (enforced in CI after tests land):
# run `pytest --cov=src/gbridge --cov-fail-under=80` to gate

[tool.coverage.run]
source = ["src/gbridge"]
omit = [
    "src/gbridge/gui/*",  # Tk GUI is exercised manually
    "src/gbridge/service/*",  # OS-specific autostart wrappers
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
